Time: 21 ms (62.86%), Space: 42.5 MB (91.19%) - LeetHub